# name: test_create[uvloop-None-False-False]
  <class 'dict'> {
    '_id': 'bar',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Bar Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_create[uvloop-None-False-False].1
  <class 'dict'> {
    '_id': '9pfsom1b',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'Plant',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
  }
---
# name: test_create[uvloop-None-False-False].2
  <class 'dict'> {
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'add',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': '9pfsom1b',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'Plant',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': <class 'dict'> {
                'id': 'foo',
              },
              'segment': None,
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'create_sequence',
    'otu': <class 'dict'> {
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_create[uvloop-None-False-True]
  <class 'dict'> {
    '_id': 'bar',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Bar Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_create[uvloop-None-False-True].1
  <class 'dict'> {
    '_id': '9pfsom1b',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
  }
---
# name: test_create[uvloop-None-False-True].2
  <class 'dict'> {
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'add',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': '9pfsom1b',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'host',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': <class 'dict'> {
                'id': 'foo',
              },
              'segment': None,
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'create_sequence',
    'otu': <class 'dict'> {
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_create[uvloop-None-True-False]
  <class 'dict'> {
    '_id': 'bar',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Bar Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_create[uvloop-None-True-False].1
  <class 'dict'> {
    '_id': '9pfsom1b',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'Plant',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
  }
---
# name: test_create[uvloop-None-True-False].2
  <class 'dict'> {
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'add',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': '9pfsom1b',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'Plant',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': <class 'dict'> {
                'id': 'foo',
              },
              'segment': 'seg',
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'create_sequence',
    'otu': <class 'dict'> {
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_create[uvloop-None-True-True]
  <class 'dict'> {
    '_id': 'bar',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Bar Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_create[uvloop-None-True-True].1
  <class 'dict'> {
    '_id': '9pfsom1b',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
  }
---
# name: test_create[uvloop-None-True-True].2
  <class 'dict'> {
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'add',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': '9pfsom1b',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'host',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': <class 'dict'> {
                'id': 'foo',
              },
              'segment': 'seg',
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'create_sequence',
    'otu': <class 'dict'> {
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_create[uvloop-foobar-False-False]
  <class 'dict'> {
    '_id': 'bar',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Bar Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_create[uvloop-foobar-False-False].1
  <class 'dict'> {
    '_id': 'foobar',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'Plant',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
  }
---
# name: test_create[uvloop-foobar-False-False].2
  <class 'dict'> {
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'add',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': 'foobar',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'Plant',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': <class 'dict'> {
                'id': 'foo',
              },
              'segment': None,
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'create_sequence',
    'otu': <class 'dict'> {
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_create[uvloop-foobar-False-True]
  <class 'dict'> {
    '_id': 'bar',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Bar Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_create[uvloop-foobar-False-True].1
  <class 'dict'> {
    '_id': 'foobar',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
  }
---
# name: test_create[uvloop-foobar-False-True].2
  <class 'dict'> {
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'add',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': 'foobar',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'host',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': <class 'dict'> {
                'id': 'foo',
              },
              'segment': None,
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'create_sequence',
    'otu': <class 'dict'> {
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_create[uvloop-foobar-True-False]
  <class 'dict'> {
    '_id': 'bar',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Bar Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_create[uvloop-foobar-True-False].1
  <class 'dict'> {
    '_id': 'foobar',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'Plant',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
  }
---
# name: test_create[uvloop-foobar-True-False].2
  <class 'dict'> {
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'add',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': 'foobar',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'Plant',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': <class 'dict'> {
                'id': 'foo',
              },
              'segment': 'seg',
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'create_sequence',
    'otu': <class 'dict'> {
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_create[uvloop-foobar-True-True]
  <class 'dict'> {
    '_id': 'bar',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Bar Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_create[uvloop-foobar-True-True].1
  <class 'dict'> {
    '_id': 'foobar',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
  }
---
# name: test_create[uvloop-foobar-True-True].2
  <class 'dict'> {
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'add',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': 'foobar',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'host',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': <class 'dict'> {
                'id': 'foo',
              },
              'segment': 'seg',
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'create_sequence',
    'otu': <class 'dict'> {
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_edit[uvloop-False]
  <class 'dict'> {
    '_id': 'foo',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'bar',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Foo Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_edit[uvloop-False].1
  <class 'dict'> {
    '_id': 'foo.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Edited sequence baz in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'accession',
        ],
        <class 'list'> [
          '123abc',
          '987xyz',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'host',
        ],
        <class 'list'> [
          '',
          'Apple',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'definition',
        ],
        <class 'list'> [
          'Apple virus organism',
          'Hello world',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'segment',
        ],
        <class 'list'> [
          'RNA-B',
          'RNA-A',
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'edit_sequence',
    'otu': <class 'dict'> {
      'id': 'foo',
      'name': 'Foo Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_edit[uvloop-False].2
  <class 'dict'> {
    '_id': 'baz',
    'accession': '987xyz',
    'definition': 'Hello world',
    'host': 'Apple',
    'isolate_id': 'bar',
    'otu_id': 'foo',
    'segment': 'RNA-A',
    'sequence': 'ATGC',
  }
---
# name: test_edit[uvloop-True]
  <class 'dict'> {
    '_id': 'foo',
    'isolates': <class 'list'> [
      <class 'dict'> {
        'id': 'bar',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'name': 'Foo Virus',
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'verified': True,
    'version': 4,
  }
---
# name: test_edit[uvloop-True].1
  <class 'dict'> {
    '_id': 'foo.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Edited sequence baz in Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'accession',
        ],
        <class 'list'> [
          '123abc',
          '987xyz',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'host',
        ],
        <class 'list'> [
          '',
          'Apple',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'definition',
        ],
        <class 'list'> [
          'Apple virus organism',
          'Hello world',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'segment',
        ],
        <class 'list'> [
          'RNA-B',
          'RNA-A',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
          0,
          'sequence',
        ],
        <class 'list'> [
          'ATGC',
          'ATAGAGGAGTAAGAGTGA',
        ],
      ],
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          3,
          4,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'edit_sequence',
    'otu': <class 'dict'> {
      'id': 'foo',
      'name': 'Foo Virus',
      'version': 4,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_edit[uvloop-True].2
  <class 'dict'> {
    '_id': 'baz',
    'accession': '987xyz',
    'definition': 'Hello world',
    'host': 'Apple',
    'isolate_id': 'bar',
    'otu_id': 'foo',
    'segment': 'RNA-A',
    'sequence': 'ATAGAGGAGTAAGAGTGA',
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'id': 'baz',
    'isolate_id': 'bar',
    'otu_id': 'foo',
    'sequence': 'ATGC',
  }
---
# name: test_get[uvloop-isolate]
  None
---
# name: test_get[uvloop-otu]
  None
---
# name: test_get[uvloop-sequence]
  None
---
# name: test_increment_otu_version[uvloop]
  <class 'dict'> {
    '_id': 'foo',
    'verified': False,
    'version': 4,
  }
---
# name: test_remove[uvloop]
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_remove[uvloop].1
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed sequence baz from Isolate 8816-v2',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'remove',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': 'baz',
              'accession': '123abc',
              'definition': 'Apple virus organism',
              'host': '',
              'isolate_id': 'cab8b360',
              'otu_id': '6116cba1',
              'segment': 'RNA-B',
              'sequence': 'ATGC',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'remove_sequence',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
